non_executable_reasons_record_from_random_10k/424.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%writefile example2.txt
first 
second line
the third line
then a fourth line
------------------

[0;36m  File [0;32m"<ipython-input-1-f2f2b209f4cb>"[0;36m, line [0;32m5[0m
[0;31m    second line[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-f2f2b209f4cb>, line 5)

Executability                            : False
